[package]
name = "equistore-core"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.61"
exclude = [
    "tests"
]

[lib]
# When our minimal Rust version becomes 1.64, we can pass these options directly
# to Cargo. Until then, we build all the crate-type we need.
name = "equistore"
crate-type = ["cdylib", "staticlib"]
bench = false

[dependencies]
ahash = "0.7"
indexmap = "1"
once_cell = "1"
smallvec = {version = "1", features = ["union"]}

# implementation of the NPZ serialization format
byteorder = {version = "1"}
num-traits = {version = "0.2", default-features = false}
zip = {version = "0.6", default-features = false}

[build-dependencies]
# pin cbdingen until https://github.com/mozilla/cbindgen/issues/841 is fixed
cbindgen = { version = "=0.24.5", default-features = false }

[dev-dependencies]
which = "4"
