[package]
name = "equistore"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"
include = [
    "build.rs",
    "src/",
    "equistore-core-*.crate",
]

[lib]
bench = false

[dependencies]
once_cell = "1"
smallvec = {version = "1", features = ["union"]}
ndarray = {version = "0.15"}
rayon = {version = "1", optional = true}

[features]
default = []
# use the static build of equistore-core instead of the shared one
static = []

[build-dependencies]
# we need to pin cmake to an older version to have it work on rust 1.56
cmake = "=0.1.45"
which = "4"
glob = "0.3"
