[package]
name = "metatensor-core"
version = "0.1.17"
edition = "2021"
publish = false
rust-version = "1.74"
exclude = [
    "tests"
]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "metatensor"
bench = false

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["std"]}
hashbrown = "0.16"
indexmap = "2"
once_cell = "1"
smallvec = {version = "1", features = ["union"]}

# this is part of the standard library and stable since rust 1.84,
# we can remove it when our MSRV is at least 1.84
is_sorted = "0.1"

# implementation of the MTS serialization format
byteorder = {version = "1"}
num-traits = {version = "0.2", default-features = false}
zip = {version = "2", default-features = false, features = ["deflate"]}

[build-dependencies]
cbindgen = { version = "0.29", default-features = false }

[dev-dependencies]
lazy_static = "1"
which = "8"
