[package]
name = "metatensor-core"
version = "0.1.19"
edition = "2021"
publish = false
rust-version = "1.74"
exclude = [
    "tests"
]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "metatensor"
bench = false

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["std"]}
hashbrown = "0.16"
# the last version that supports Rust 1.74
indexmap = "=2.11.4"
once_cell = "1"
smallvec = {version = "1", features = ["union"]}

# this is part of the standard library and stable since rust 1.84,
# we can remove it when our MSRV is at least 1.84
is_sorted = "0.1"

# implementation of the MTS serialization format
byteorder = {version = "1"}
num-traits = {version = "0.2", default-features = false}
zip = {version = "0.6", default-features = false, features = ["deflate"]}
jzon = "0.12"
dlpk = "0.1.0"

[build-dependencies]
cbindgen = { version = "0.29", default-features = false }

# the last versions that supports Rust 1.74
serde_spanned = "=1.0.1"
toml = "=0.9.6"
toml_datetime = "=0.7.1"
toml_parser = "=1.0.2"
toml_writer = "=1.0.2"

[dev-dependencies]
lazy_static = "1"
which = "8"
dlpk = { version = "0.1.0", features = ["ndarray"] }
