[package]
name = "metatensor-core"
# This should be kept in sync with the version number in `rust/metatensor-sys`
version = "0.2.3"
edition = "2024"
publish = false
rust-version = "1.88"
exclude = [
    "tests"
]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "metatensor"
bench = false

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["std"]}
hashbrown = "0.17"
indexmap = "2.14"
once_cell = "1"
smallvec = {version = "1", features = ["union"]}

# implementation of the MTS serialization format
byteorder = {version = "1"}
num-traits = {version = "0.2", default-features = false}
zip = {version = "0.6", default-features = false, features = ["deflate"]}
jzon = "0.12"
dlpk = { version = "0.4.0", features = ["ndarray", "half"]}
ndarray = {version = "0.17"}
half = { version = "2.7"}

[build-dependencies]
cbindgen = { version = "0.29", default-features = false }

[dev-dependencies]
lazy_static = "1"
which = "8"
